--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
             四维立方体浏览器
         </h3>
         <div class="paragraph">
-            By <a href="https://twitter.com/thsherif" target="_blank">Tarek Sherif</a>
+            By <a href="https://twitter.com/thsherif" target="_blank">Tarek Sherif</a><br>
+            由 <a href="https://github.com/GlassFoxowo-Dev" target="_blank">玻狸</a>翻译为简体中文
         </div>
         <div id="no-webgl2" class="paragraph">
             噢不！此浏览器不支持WebGL 2！您可以在此了解有关四维立方体的信息，但在桌面或Android上正常浏览此网页，您需要Chrome、Firefox或Edge的最新版本！
